--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,39 +74,74 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest pytest-cov pytest-asyncio
+        pip install pytest pytest-cov pytest-asyncio httpx requests psycopg2-binary
     
     - name: Set up environment variables
       run: |
         echo "DATABASE_URL=postgresql://postgres:postgres@localhost:5432/a2a_registry_test" >> $GITHUB_ENV
         echo "REDIS_URL=redis://localhost:6379/0" >> $GITHUB_ENV
         echo "ELASTICSEARCH_URL=http://localhost:9200" >> $GITHUB_ENV
-        echo "SECRET_KEY=test-secret-key-for-ci" >> $GITHUB_ENV
+        echo "ELASTICSEARCH_INDEX=a2a_agents_test" >> $GITHUB_ENV
+        echo "SECRET_KEY=test-secret-key-for-ci-cd-pipeline-very-long-and-secure" >> $GITHUB_ENV
+        echo "ALGORITHM=HS256" >> $GITHUB_ENV
+        echo "ACCESS_TOKEN_EXPIRE_MINUTES=30" >> $GITHUB_ENV
         echo "DEBUG=true" >> $GITHUB_ENV
+        echo "APP_NAME=A2A Agent Registry Test" >> $GITHUB_ENV
+        echo "APP_VERSION=1.0.0" >> $GITHUB_ENV
+        echo "REGISTRY_BASE_URL=http://localhost:8000" >> $GITHUB_ENV
+        echo "MAX_AGENTS_PER_CLIENT=1000" >> $GITHUB_ENV
+        echo "ENABLE_FEDERATION=true" >> $GITHUB_ENV
     
     - name: Wait for services
       run: |
-        sleep 30
+        sleep 45
         # Test database connection
         python -c "
         import psycopg2
-        conn = psycopg2.connect('postgresql://postgres:postgres@localhost:5432/a2a_registry_test')
-        conn.close()
-        print('Database connected successfully')
+        import time
+        for i in range(5):
+            try:
+                conn = psycopg2.connect('postgresql://postgres:postgres@localhost:5432/a2a_registry_test')
+                conn.close()
+                print('Database connected successfully')
+                break
+            except Exception as e:
+                print(f'Database connection attempt {i+1} failed: {e}')
+                time.sleep(10)
+        else:
+            raise Exception('Database connection failed after 5 attempts')
         "
         # Test Redis connection
         python -c "
         import redis
-        r = redis.Redis(host='localhost', port=6379, db=0)
-        r.ping()
-        print('Redis connected successfully')
+        import time
+        for i in range(5):
+            try:
+                r = redis.Redis(host='localhost', port=6379, db=0)
+                r.ping()
+                print('Redis connected successfully')
+                break
+            except Exception as e:
+                print(f'Redis connection attempt {i+1} failed: {e}')
+                time.sleep(5)
+        else:
+            raise Exception('Redis connection failed after 5 attempts')
         "
         # Test Elasticsearch connection
         python -c "
         import requests
-        response = requests.get('http://localhost:9200/_cluster/health')
-        response.raise_for_status()
-        print('Elasticsearch connected successfully')
+        import time
+        for i in range(10):
+            try:
+                response = requests.get('http://localhost:9200/_cluster/health', timeout=10)
+                response.raise_for_status()
+                print('Elasticsearch connected successfully')
+                break
+            except Exception as e:
+                print(f'Elasticsearch connection attempt {i+1} failed: {e}')
+                time.sleep(10)
+        else:
+            raise Exception('Elasticsearch connection failed after 10 attempts')
         "
     
     - name: Run database migrations
@@ -139,7 +174,7 @@ jobs:
     - name: Install linting dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install black isort flake8 mypy
+        pip install black isort flake8 mypy types-redis types-requests
     
     - name: Run black
       run: |
