--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,6 @@ psutil==5.9.6
 pytest==7.4.3
 pytest-asyncio==0.21.1
 aiofiles==23.2.1
+# Type stubs for mypy
+types-redis==4.6.0.20241004
+types-requests==2.32.4.20250913
