--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest pytest-cov pytest-asyncio httpx requests
+        pip install -r requirements-dev.txt
     
     - name: Set up environment variables
       run: |
@@ -83,8 +82,7 @@ jobs:
     - name: Install linting dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install black isort flake8 mypy
-        pip install types-redis types-requests
+        pip install -r requirements-dev.txt
     
     - name: Run black
       run: |
@@ -119,7 +117,7 @@ jobs:
     - name: Install security dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install safety bandit
+        pip install -r requirements-dev.txt
     
     - name: Run safety check
       run: |
