--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,33 @@
+# Core web framework
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+
+# Database
 sqlalchemy==2.0.23
 alembic==1.12.1
-psycopg2-binary==2.9.9
+
+# Data validation and settings
 pydantic==2.5.0
 pydantic-settings==2.1.0
 email-validator==2.1.0
+
+# Authentication and security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
+
+# HTTP client
 httpx==0.25.2
+
+# External services
 redis==5.0.1
 elasticsearch==8.11.0
+
+# Search functionality
 sentence-transformers==2.7.0
 numpy==1.24.3
+
+# Monitoring and logging
 prometheus-client==0.19.0
 python-json-logger==2.0.7
 psutil==5.9.6
-pytest==7.4.3
-pytest-asyncio==0.21.1
-aiofiles==23.2.1
-# Type stubs for mypy
-types-redis==4.6.0.20241004
-types-requests==2.32.4.20250913
