--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ sqlalchemy==2.0.23
 alembic==1.12.1
 
 # Data validation and settings
-pydantic==2.5.0
+pydantic>=2.6.0,<2.10.0
 pydantic-settings==2.1.0
 email-validator==2.1.0
 
@@ -30,4 +30,4 @@ numpy==1.24.3
 # Monitoring and logging
 prometheus-client==0.19.0
 python-json-logger==2.0.7
-psutil==5.9.6
+psutil>=6.1.0,<8.0
