--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,7 +7,7 @@ pytest-asyncio==0.21.1
 pytest-cov==7.0.0
 
 # Code quality
-black==24.1.1
+black>=24.3.0
 isort==5.13.2
 flake8==7.0.0
 mypy==1.8.0
@@ -18,4 +18,4 @@ types-requests==2.32.4.20250913
 
 # Security scanning
 safety==3.6.1
-bandit==1.7.5
+bandit>=1.7.7
