fix: revert CI config changes and update isort version
- Remove explicit configuration from CI workflow
- Let isort and black read configuration from pyproject.toml
- Update isort to >=5.13.2 for better pyproject.toml support

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,11 +86,11 @@ jobs:
     
     - name: Run black
       run: |
-        black --check --line-length 88 app/ tests/
+        black --check app/ tests/
     
     - name: Run isort
       run: |
-        isort --check-only --profile black --line-length 88 app/ tests/
+        isort --check-only app/ tests/
     
     - name: Run flake8
       run: |
