--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,6 +145,7 @@ jobs:
     
     - name: Build Docker image
       uses: docker/build-push-action@v5
+      timeout-minutes: 10
       with:
         context: .
         file: ./Dockerfile.prod
@@ -156,3 +157,23 @@ jobs:
     - name: Test Docker image
       run: |
         docker run --rm a2a-registry:latest python -c "import app; print('App imports successfully')"
+    
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    
+    - name: Push to GitHub Container Registry
+      uses: docker/build-push-action@v5
+      timeout-minutes: 10
+      with:
+        context: .
+        file: ./Dockerfile.prod
+        push: true
+        tags: |
+          ghcr.io/${{ github.repository }}:latest
+          ghcr.io/${{ github.repository }}:${{ github.sha }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
