--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -34,8 +34,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 # Copy requirements and install Python dependencies
 COPY requirements-prod.txt .
-RUN pip install --no-cache-dir --user --upgrade pip && \
-    pip install --no-cache-dir --user -r requirements-prod.txt
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements-prod.txt
 
 # Production stage
 FROM python:3.11-slim
@@ -54,7 +54,8 @@ RUN useradd --create-home --shell /bin/bash app
 WORKDIR /app
 
 # Copy Python packages from builder
-COPY --from=builder /root/.local /home/app/.local
+COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
 
 # Copy application code
 COPY --chown=app:app . .
@@ -67,9 +68,6 @@ RUN mkdir -p /var/log/a2a-registry && chown -R app:app /var/log/a2a-registry
 
 # Switch to non-root user
 USER app
-
-# Add user packages to PATH
-ENV PATH=/home/app/.local/bin:$PATH
 
 # Expose port
 EXPOSE 8000
