--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,6 +150,7 @@ jobs:
         context: .
         file: ./Dockerfile.prod
         push: false
+        load: true
         tags: a2a-registry:latest
         cache-from: type=gha
         cache-to: type=gha,mode=min
