--- a/requirements.txt
+++ b/requirements.txt
@@ -3,31 +3,38 @@ fastapi>=0.116.0
 uvicorn[standard]>=0.24.0
 
 # Database
-sqlalchemy==2.0.23
-alembic==1.12.1
+sqlalchemy>=2.0.23
+alembic>=1.12.1
 
 # Data validation and settings
-pydantic>=2.6.0,<2.10.0
-pydantic-settings==2.1.0
-email-validator==2.1.0
+pydantic>=2.6.0
+pydantic-settings>=2.1.0
+email-validator>=2.1.0
 
 # Authentication and security
 PyJWT[crypto]>=2.8.0
-passlib[bcrypt]==1.7.4
+passlib[bcrypt]>=1.7.4
 python-multipart>=0.0.18
 
 # HTTP client
-httpx>=0.26.0,<0.29.0
+httpx>=0.26.0
+aiofiles>=24.1.0
 
 # External services
-redis==5.0.1
-elasticsearch==8.11.0
+redis>=5.0.1
+opensearch-py>=2.5.0,<3.0.0
 
-# Search functionality (optional - only needed for semantic search)
-# sentence-transformers>=3.1.0
-# numpy>=1.26.2
+# Serialization
+orjson>=3.10.0
 
 # Monitoring and logging
-prometheus-client==0.19.0
-python-json-logger==2.0.7
-psutil>=6.1.0,<8.0
+prometheus-client>=0.19.0
+python-json-logger>=2.0.7
+psutil>=6.1.0
+
+# Testing
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
+
+# Additional dependencies for compatibility
+urllib3>=1.26.19,<1.27
