--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,17 @@ psutil>=6.1.0
 # Testing
 pytest>=7.0.0
 pytest-asyncio>=0.21.0
+pytest-cov>=4.0.0
+
+# Code quality and linting
+black>=23.0.0
+isort>=5.12.0
+flake8>=6.0.0
+mypy>=1.0.0
+
+# Security
+safety>=2.3.0
+bandit>=1.7.0
 
 # Additional dependencies for compatibility
 urllib3>=1.26.19,<1.27
