--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ uvicorn[standard]>=0.24.0
 # Database
 sqlalchemy>=2.0.23
 alembic>=1.12.1
+psycopg2-binary>=2.9.0
 
 # Data validation and settings
 pydantic>=2.6.0
