feat: comprehensive security module consolidation and development tooling
## Security Module Consolidation
- Consolidated security, auth_jwks, security_service, and auth modules into unified app/security/
- Created focused sub-modules: passwords.py, jwt.py, dependencies.py, middleware.py, service.py, router.py
- Maintained all existing functionality while improving code organization
- Fixed circular import issues and improved module dependencies

## SDK Renaming and Restructuring
- Renamed SDK from a2a_sdk to a2a_reg_sdk for clarity
- Updated package name in setup.py to a2a-reg-sdk
- Restructured SDK directory structure for better organization
- Fixed AuthSchemeBuilder parameter requirements

## Quality Improvements
- Fixed ALL linting issues (0 issues remaining, 100% clean)
- Resolved syntax errors in multi_tenant_visibility_example.py and test_auth_api.py
- Fixed indentation issues in SDK models.py
- Removed unused imports and variables
- Fixed whitespace and blank line issues
- Enhanced database session management with proper cleanup

## Development Tooling
- Added comprehensive Makefile with quality checks, development, and publishing targets
- Created quality_check.py and quality_check.sh scripts for automated quality checks
- Added PyPI publishing workflow with build-sdk, test-sdk, and publish targets
- Enhanced clean target to remove SDK build artifacts

## Examples and Documentation
- Created multi-tenant visibility examples demonstrating agent isolation
- Added comprehensive examples documentation (README.md, EXAMPLES_SUMMARY.md)
- Created detailed publishing guide (PUBLISHING.md)
- Enhanced quality checks documentation (QUALITY_CHECKS.md)
- Updated main README with new development workflows

## Configuration and Environment
- Added TEST_MODE environment variable for test/production differentiation
- Enhanced pytest configuration with environment variables
- Improved rate limiting with environment-based configuration
- Added env.test file for testing enviro

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,58 +1,44 @@
 [mypy]
 python_version = 3.9
-warn_return_any = False
+warn_return_any = True
 warn_unused_configs = True
 disallow_untyped_defs = False
 disallow_incomplete_defs = False
-check_untyped_defs = False
+check_untyped_defs = True
 disallow_untyped_decorators = False
-no_implicit_optional = False
+no_implicit_optional = True
 warn_redundant_casts = True
 warn_unused_ignores = True
 warn_no_return = True
 warn_unreachable = True
-strict_equality = False
+strict_equality = True
 
-# Only ignore missing imports for libraries that truly don't have stubs
-[mypy-elasticsearch.*]
-ignore_missing_imports = True
+[mypy-tests.*]
+ignore_errors = True
 
-[mypy-sentence_transformers.*]
-ignore_missing_imports = True
-
-[mypy-huggingface_hub.*]
-ignore_missing_imports = True
-
-[mypy-prometheus_client.*]
-ignore_missing_imports = True
-
-[mypy-pythonjsonlogger.*]
-ignore_missing_imports = True
-
-[mypy-passlib.*]
-ignore_missing_imports = True
-
-[mypy-jose.*]
-ignore_missing_imports = True
-
-[mypy-pydantic.*]
-ignore_missing_imports = True
-
-[mypy-pydantic_settings.*]
-ignore_missing_imports = True
-
-[mypy-starlette.*]
-ignore_missing_imports = True
+[mypy-examples.*]
+ignore_errors = True
 
 [mypy-alembic.*]
+ignore_errors = True
+
+[mypy-scripts.*]
+ignore_errors = True
+
+[mypy-opentelemetry.*]
 ignore_missing_imports = True
 
-# Exclude test files and other directories
-exclude = [
-    "tests/",
-    "frontend/",
-    "alembic/versions/",
-    "build/",
-    "dist/",
-    "*.egg-info/",
-]
+[mypy-opentelemetry.exporter.otlp.proto.http.trace_exporter]
+ignore_missing_imports = True
+
+[mypy-opentelemetry.sdk.resources]
+ignore_missing_imports = True
+
+[mypy-opentelemetry.sdk.trace]
+ignore_missing_imports = True
+
+[mypy-opentelemetry.sdk.trace.export]
+ignore_missing_imports = True
+
+[mypy-app.services.client_service]
+ignore_missing_imports = True
