--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,8 @@ addopts =
     --strict-markers
     --disable-warnings
     --maxfail=1
+env = 
+    TEST_MODE=true
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
