--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,3 +44,7 @@ target-version = ['py39']
 [tool.isort]
 profile = "black"
 line_length = 160
+
+[tool.flake8]
+max-line-length = 160
+extend-ignore = ["E203", "W503"]
