--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - redis
       - opensearch
     volumes:
-      - ./app:/app/app
+      - .:/app
     command: uvicorn registry.main:app --host 0.0.0.0 --port 8000 --reload
 
   # Frontend removed in core-only build
