--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install -e sdk/python/
     
     - name: Set up environment variables
       run: |
@@ -58,7 +59,7 @@ jobs:
     
     - name: Run tests
       run: |
-        pytest tests/ -v --cov=app --cov-report=xml --cov-report=html
+        pytest tests/ -v --cov=registry --cov=runner --cov-report=xml --cov-report=html
     
     - name: Upload coverage reports
       uses: codecov/codecov-action@v4
@@ -83,25 +84,26 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install -e sdk/python/
     
     - name: Run black
       run: |
-        black --check app/ tests/
+        black --check --line-length 160 registry/ runner/ tests/
     
     - name: Run isort
       run: |
-        isort --check-only app/ tests/
+        isort --check-only --profile black registry/ runner/ tests/
     
     - name: Run flake8
       run: |
-        flake8 app/ tests/
+        flake8 registry/ runner/ tests/ --max-line-length=160 --extend-ignore=E203,W503
     
     - name: Run mypy
       run: |
         # Skip mypy for now due to extensive SQLAlchemy type issues
         # TODO: Fix SQLAlchemy model type annotations
         echo "Skipping mypy - SQLAlchemy type issues need to be resolved"
-        # mypy app/
+        # mypy registry/ runner/
 
   security:
     runs-on: ubuntu-latest
@@ -118,6 +120,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install -e sdk/python/
     
     - name: Run safety check
       run: |
@@ -125,7 +128,7 @@ jobs:
     
     - name: Run bandit security scan
       run: |
-        bandit -r app/ -f json -o bandit-report.json || true
+        bandit -r registry/ runner/ -f json -o bandit-report.json || true
     
     - name: Upload security report
       uses: actions/upload-artifact@v4
